@@ -70,16 +70,19 @@ public:
   void endAutoFormat(KWParag *parag,KWFormatContext *fc);
   bool doTypographicQuotes(KWParag *parag,KWFormatContext *fc);
   bool doUpperCase(KWParag *parag,KWFormatContext *fc);
-  
+
   void setEnabled(bool e) { enabled = e; }
   bool isEnabled() { return enabled; }
 
+  static bool isUpper(const QChar &c);
+  
 protected:
   KWordDocument *doc;
   TypographicQuotes typographicQuotes;
   bool enabled;
   KWString *tmpBuffer;
   bool lastWasDotSpace,convertUpperCase;
+  bool lastWasUpper,convertUpperUpper;
   
 };
 
